--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -5,6 +5,13 @@
     stripComponents = 1
     refreshPeriod = "168h"
 
+[".tmux"]
+    type = "archive"
+    url = "https://github.com/BigAngryDinosaur/.tmux/archive/master.zip"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
+
 [".tmux/plugins/tpm"]
     type = "archive"
     url = "https://github.com/tmux-plugins/tpm/archive/master.tar.gz"
