--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,7 +1,7 @@
 
 private_dot_config/private_karabiner/private_automatic_backups/
 
-.oh-my-zsh/cache/
+.oh-my-zsh
 
 .config/karabiner/automatic_backups
 
