update km settings

--- a/private_Library/private_Application Support/Keyboard Maestro/Keyboard Maestro Recent Applications.plist
+++ b/private_Library/private_Application Support/Keyboard Maestro/Keyboard Maestro Recent Applications.plist
@@ -4,43 +4,19 @@
 <array>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.systempreferences</string>
-		<key>Name</key>
-		<string>System Settings</string>
-		<key>NewFile</key>
-		<string>/System/Applications/System Settings.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.runningwithcrayons.Alfred-Preferences</string>
-		<key>Name</key>
-		<string>Alfred Preferences</string>
-		<key>NewFile</key>
-		<string>/Applications/Alfred 5.app/Contents/Preferences/Alfred Preferences.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.apple.ActivityMonitor</string>
-		<key>Name</key>
-		<string>Activity Monitor</string>
-		<key>NewFile</key>
-		<string>/System/Applications/Utilities/Activity Monitor.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.apple.AccessibilityInspector</string>
-		<key>Name</key>
-		<string>Accessibility Inspector</string>
-		<key>NewFile</key>
-		<string>/Applications/Xcode.app/Contents/Applications/Accessibility Inspector.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
 		<string>com.apple.finder</string>
 		<key>Name</key>
 		<string>Finder</string>
 		<key>NewFile</key>
 		<string>/System/Library/CoreServices/Finder.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.google.Chrome.canary</string>
+		<key>Name</key>
+		<string>Google Chrome Canary</string>
+		<key>NewFile</key>
+		<string>/Applications/Google Chrome Canary.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -52,43 +28,51 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.tinyspeck.slackmacgap</string>
+		<string>com.superduper.superwhisper</string>
 		<key>Name</key>
-		<string>Slack</string>
+		<string>superwhisper</string>
 		<key>NewFile</key>
-		<string>/Applications/Slack.app</string>
+		<string>/Applications/superwhisper.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.google.Chrome</string>
+		<string>com.dwarvesv.minimalbar</string>
 		<key>Name</key>
-		<string>Google Chrome</string>
+		<string>Hidden Bar</string>
 		<key>NewFile</key>
-		<string>/Applications/Google Chrome.app</string>
+		<string>/Applications/Hidden Bar.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>org.mozilla.firefoxdeveloperedition</string>
+		<string>com.openai.chat</string>
 		<key>Name</key>
-		<string>Firefox Developer Edition</string>
+		<string>ChatGPT</string>
 		<key>NewFile</key>
-		<string>/Applications/Firefox Developer Edition.app</string>
+		<string>/Applications/ChatGPT.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.dt.Xcode</string>
+		<string>com.meta.virtualdesktop</string>
 		<key>Name</key>
-		<string>Xcode</string>
+		<string>Meta Quest Remote Desktop</string>
 		<key>NewFile</key>
-		<string>/Applications/Xcode.app</string>
+		<string>/Applications/Meta Quest Remote Desktop.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.microsoft.VSCode</string>
+		<string>app.scriptkit</string>
 		<key>Name</key>
-		<string>Visual Studio Code</string>
+		<string>Kit</string>
 		<key>NewFile</key>
-		<string>/Applications/Visual Studio Code.app</string>
+		<string>/Applications/Kit.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.smartcodeltd.stremio</string>
+		<key>Name</key>
+		<string>Stremio</string>
+		<key>NewFile</key>
+		<string>/Applications/Stremio.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -100,27 +84,19 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.iphonesimulator</string>
+		<string>net.shinyfrog.bear</string>
 		<key>Name</key>
-		<string>Simulator</string>
+		<string>Bear</string>
 		<key>NewFile</key>
-		<string>/Applications/Xcode.app/Contents/Developer/Applications/Simulator.app</string>
+		<string>/Applications/Bear.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.googlecode.iterm2</string>
+		<string>com.apple.AppStore</string>
 		<key>Name</key>
-		<string>iTerm</string>
+		<string>App Store</string>
 		<key>NewFile</key>
-		<string>/Applications/iTerm.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.apple.Console</string>
-		<key>Name</key>
-		<string>Console</string>
-		<key>NewFile</key>
-		<string>/System/Applications/Utilities/Console.app</string>
+		<string>/System/Applications/App Store.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -132,11 +108,115 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.torusknot.SourceTreeNotMAS</string>
+		<string>org.pqrs.Karabiner-Elements.Settings</string>
 		<key>Name</key>
-		<string>Sourcetree</string>
+		<string>Karabiner-Elements</string>
 		<key>NewFile</key>
-		<string>/Applications/Sourcetree.app</string>
+		<string>/Applications/Karabiner-Elements.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.systempreferences</string>
+		<key>Name</key>
+		<string>System Settings</string>
+		<key>NewFile</key>
+		<string>/System/Applications/System Settings.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.googlecode.iterm2</string>
+		<key>Name</key>
+		<string>iTerm</string>
+		<key>NewFile</key>
+		<string>/Applications/iTerm.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>fm.qmk.toolbox</string>
+		<key>Name</key>
+		<string>QMK Toolbox</string>
+		<key>NewFile</key>
+		<string>/Applications/QMK Toolbox.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Notes</string>
+		<key>Name</key>
+		<string>Notes</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Notes.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.tinyspeck.slackmacgap</string>
+		<key>Name</key>
+		<string>Slack</string>
+		<key>NewFile</key>
+		<string>/Applications/Slack.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.hnc.Discord</string>
+		<key>Name</key>
+		<string>Discord</string>
+		<key>NewFile</key>
+		<string>/Applications/Discord.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.runningwithcrayons.Alfred-Preferences</string>
+		<key>Name</key>
+		<string>Alfred Preferences</string>
+		<key>NewFile</key>
+		<string>/Applications/Alfred 5.app/Contents/Preferences/Alfred Preferences.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.archiveutility</string>
+		<key>Name</key>
+		<string>Archive Utility</string>
+		<key>NewFile</key>
+		<string>/System/Library/CoreServices/Applications/Archive Utility.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.google.Chrome</string>
+		<key>Name</key>
+		<string>Google Chrome</string>
+		<key>NewFile</key>
+		<string>/Applications/Google Chrome.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.logi.optionsplus.installer</string>
+		<key>Name</key>
+		<string>logioptionsplus_installer 2</string>
+		<key>NewFile</key>
+		<string>~/Downloads/logioptionsplus_installer 2.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.logitech.manager.uninstaller</string>
+		<key>Name</key>
+		<string>Logi Options Uninstaller</string>
+		<key>NewFile</key>
+		<string>/Applications/Utilities/LogiMgr Uninstaller.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>org.mozilla.firefoxdeveloperedition</string>
+		<key>Name</key>
+		<string>Firefox Developer Edition</string>
+		<key>NewFile</key>
+		<string>/Applications/Firefox Developer Edition.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.microsoft.VSCode</string>
+		<key>Name</key>
+		<string>Visual Studio Code</string>
+		<key>NewFile</key>
+		<string>/Applications/Visual Studio Code.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -148,11 +228,381 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
+		<string>com.1password.1password</string>
+		<key>Name</key>
+		<string>1Password</string>
+		<key>NewFile</key>
+		<string>/Applications/1Password.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Preview</string>
+		<key>Name</key>
+		<string>Preview</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Preview.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.ableton.live</string>
+		<key>Name</key>
+		<string>Ableton Live 12 Suite</string>
+		<key>NewFile</key>
+		<string>/Applications/Ableton Live 12 Suite.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>dev.zed.Zed</string>
+		<key>Name</key>
+		<string>Zed</string>
+		<key>NewFile</key>
+		<string>/Applications/Zed.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.raycast.macos</string>
+		<key>Name</key>
+		<string>Raycast</string>
+		<key>NewFile</key>
+		<string>/Applications/Raycast.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.mail</string>
+		<key>Name</key>
+		<string>Mail</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Mail.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.adobe.acc.AdobeCreativeCloud</string>
+		<key>Name</key>
+		<string>Creative Cloud</string>
+		<key>NewFile</key>
+		<string>/Applications/Utilities/Adobe Creative Cloud/ACC/Creative Cloud.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.valvesoftware.steam</string>
+		<key>Name</key>
+		<string>Steam</string>
+		<key>NewFile</key>
+		<string>~/Library/Application Support/Steam/Steam.AppBundle/Steam</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.valvesoftware.steam</string>
+		<key>Name</key>
+		<string>Steam</string>
+		<key>NewFile</key>
+		<string>/Applications/Steam.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.virtualDesktopInc.Mac.Streamer</string>
+		<key>Name</key>
+		<string>Virtual Desktop Streamer</string>
+		<key>NewFile</key>
+		<string>/Applications/Virtual Desktop Streamer.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.logi.optionsplus.installer</string>
+		<key>Name</key>
+		<string>Logi Options+ Installer</string>
+		<key>NewFile</key>
+		<string>~/Downloads/logioptionsplus_installer.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.logi.bolt.app</string>
+		<key>Name</key>
+		<string>Logi Bolt</string>
+		<key>NewFile</key>
+		<string>/Applications/Logi Bolt.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.logitech.unifying.assistant</string>
+		<key>Name</key>
+		<string>Logitech Unifying Software</string>
+		<key>NewFile</key>
+		<string>/Library/Application Support/Logitech.localized/Logitech Options.localized/Logitech Unifying Software.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.roli.Equator2</string>
+		<key>Name</key>
+		<string>Equator2</string>
+		<key>NewFile</key>
+		<string>/Applications/Equator2.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.TextEdit</string>
+		<key>Name</key>
+		<string>TextEdit</string>
+		<key>NewFile</key>
+		<string>/System/Applications/TextEdit.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.roli.rolidashboard</string>
+		<key>Name</key>
+		<string>ROLI Dashboard</string>
+		<key>NewFile</key>
+		<string>/Applications/ROLI Dashboard.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.adobe.Acrobat.Pro</string>
+		<key>Name</key>
+		<string>Adobe Acrobat</string>
+		<key>NewFile</key>
+		<string>/Applications/Adobe Acrobat DC/Adobe Acrobat.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>org.videolan.vlc</string>
+		<key>Name</key>
+		<string>VLC</string>
+		<key>NewFile</key>
+		<string>/Applications/VLC.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.electron.ollama</string>
+		<key>Name</key>
+		<string>Ollama</string>
+		<key>NewFile</key>
+		<string>/Applications/Ollama.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.helpviewer</string>
+		<key>Name</key>
+		<string>Tips</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Tips.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.dt.Xcode</string>
+		<key>Name</key>
+		<string>Xcode</string>
+		<key>NewFile</key>
+		<string>/Applications/Xcode.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.BluetoothFileExchange</string>
+		<key>Name</key>
+		<string>Bluetooth File Exchange</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Utilities/Bluetooth File Exchange.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Safari</string>
+		<key>Name</key>
+		<string>Safari</string>
+		<key>NewFile</key>
+		<string>/System/Volumes/Preboot/Cryptexes/App/System/Applications/Safari.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Dictionary</string>
+		<key>Name</key>
+		<string>Dictionary</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Dictionary.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.ActivityMonitor</string>
+		<key>Name</key>
+		<string>Activity Monitor</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Utilities/Activity Monitor.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.11bitstudios.frostpunk</string>
+		<key>Name</key>
+		<string>Frostpunk</string>
+		<key>NewFile</key>
+		<string>~/Library/Application Support/Steam/steamapps/common/Frostpunk/Frostpunk.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>Project Zomboid</string>
+		<key>Name</key>
+		<string>Project Zomboid</string>
+		<key>NewFile</key>
+		<string>~/Library/Application Support/Steam/steamapps/common/ProjectZomboid/Project Zomboid.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.grizzlygames.thronefall</string>
+		<key>Name</key>
+		<string>Thronefall</string>
+		<key>NewFile</key>
+		<string>~/Library/Application Support/Steam/steamapps/common/Thronefall/Thronefall.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string></string>
+		<key>Name</key>
+		<string>Night in the Woods</string>
+		<key>NewFile</key>
+		<string>~/Library/Application Support/Steam/steamapps/common/Night in the Woods/Night in the Woods.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.calculator</string>
+		<key>Name</key>
+		<string>Calculator</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Calculator.app</string>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>dota2</string>
+		<key>NewFile</key>
+		<string>~/Library/Application Support/Steam/steamapps/common/dota 2 beta/game/bin/osx64/dota2.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
 		<string>com.apple.Music</string>
 		<key>Name</key>
 		<string>Music</string>
 		<key>NewFile</key>
 		<string>/System/Applications/Music.app</string>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>ui</string>
+		<key>NewFile</key>
+		<string>~/code/rust/zia/target/debug/ui</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.AccessibilityInspector</string>
+		<key>Name</key>
+		<string>Accessibility Inspector</string>
+		<key>NewFile</key>
+		<string>/Applications/Xcode.app/Contents/Applications/Accessibility Inspector.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>org.chromium.Chromium</string>
+		<key>Name</key>
+		<string>Chromium</string>
+		<key>NewFile</key>
+		<string>~/.continue/.utils/.chromium-browser-snapshots/chromium/mac_arm-1355624/chrome-mac/Chromium.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.rusha.AccTest</string>
+		<key>Name</key>
+		<string>AccTest</string>
+		<key>NewFile</key>
+		<string>~/Library/Developer/Xcode/DerivedData/AccTest-bfgubtdnymdhbpaoqehvcomfvldb/Build/Products/Debug/AccTest.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Terminal</string>
+		<key>Name</key>
+		<string>Terminal</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Utilities/Terminal.app</string>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>mimic</string>
+		<key>NewFile</key>
+		<string>~/code/mimic/src-tauri/target/debug/mimic</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.DiskUtility</string>
+		<key>Name</key>
+		<string>Disk Utility</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Utilities/Disk Utility.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.audio.AudioMIDISetup</string>
+		<key>Name</key>
+		<string>Audio MIDI Setup</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Utilities/Audio MIDI Setup.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.logic10</string>
+		<key>Name</key>
+		<string>Logic Pro</string>
+		<key>NewFile</key>
+		<string>/Applications/Logic Pro X.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.installer</string>
+		<key>Name</key>
+		<string>Installer</string>
+		<key>NewFile</key>
+		<string>/System/Library/CoreServices/Installer.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>cx.c3.theunarchiver</string>
+		<key>Name</key>
+		<string>The Unarchiver</string>
+		<key>NewFile</key>
+		<string>/Applications/The Unarchiver.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.audiomodeling.SWAMCello3</string>
+		<key>Name</key>
+		<string>SWAM Cello 3</string>
+		<key>NewFile</key>
+		<string>/Applications/Audio Modeling/SWAM Cello/SWAM Cello 3.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.native-instruments.Kontakt 7</string>
+		<key>Name</key>
+		<string>Kontakt 7</string>
+		<key>NewFile</key>
+		<string>/Applications/Native Instruments/Kontakt 7/Kontakt 7.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>org.m0k.transmission</string>
+		<key>Name</key>
+		<string>Transmission</string>
+		<key>NewFile</key>
+		<string>/Applications/Transmission.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.audio.InfoHelper</string>
+		<key>Name</key>
+		<string>com.apple.audio.InfoHelper</string>
+		<key>NewFile</key>
+		<string>/System/Library/Frameworks/AudioToolbox.framework/XPCServices/com.apple.audio.InfoHelper.xpc</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.roli.StudioPlayer</string>
+		<key>Name</key>
+		<string>ROLI Studio Player</string>
+		<key>NewFile</key>
+		<string>/Applications/ROLI Studio Player.app</string>
 	</dict>
 </array>
 </plist>
