--- a/private_Library/private_Application Support/Keyboard Maestro/Keyboard Maestro Recent Applications.plist
+++ b/private_Library/private_Application Support/Keyboard Maestro/Keyboard Maestro Recent Applications.plist
@@ -4,14 +4,6 @@
 <array>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>org.pqrs.Karabiner-EventViewer</string>
-		<key>Name</key>
-		<string>Karabiner-EventViewer</string>
-		<key>NewFile</key>
-		<string>/Applications/Karabiner-EventViewer.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
 		<string>com.apple.finder</string>
 		<key>Name</key>
 		<string>Finder</string>
@@ -28,19 +20,43 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.superduper.superwhisper</string>
+		<string>com.apple.dt.Xcode</string>
 		<key>Name</key>
-		<string>superwhisper</string>
+		<string>Xcode</string>
 		<key>NewFile</key>
-		<string>/Applications/superwhisper.app</string>
+		<string>/Applications/Xcode.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.dwarvesv.minimalbar</string>
+		<string>com.google.Chrome</string>
 		<key>Name</key>
-		<string>Hidden Bar</string>
+		<string>Google Chrome</string>
 		<key>NewFile</key>
-		<string>/Applications/Hidden Bar.app</string>
+		<string>/Applications/Google Chrome.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>org.mozilla.firefoxdeveloperedition</string>
+		<key>Name</key>
+		<string>Firefox Developer Edition</string>
+		<key>NewFile</key>
+		<string>/Applications/Firefox Developer Edition.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.torusknot.SourceTreeNotMAS</string>
+		<key>Name</key>
+		<string>Sourcetree</string>
+		<key>NewFile</key>
+		<string>/Applications/Sourcetree.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.tinyspeck.slackmacgap</string>
+		<key>Name</key>
+		<string>Slack</string>
+		<key>NewFile</key>
+		<string>/Applications/Slack.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -52,6 +68,70 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
+		<string>com.superduper.superwhisper</string>
+		<key>Name</key>
+		<string>superwhisper</string>
+		<key>NewFile</key>
+		<string>/Applications/superwhisper.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.iphonesimulator</string>
+		<key>Name</key>
+		<string>Simulator</string>
+		<key>NewFile</key>
+		<string>/Applications/Xcode.app/Contents/Developer/Applications/Simulator.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Preview</string>
+		<key>Name</key>
+		<string>Preview</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Preview.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.mitchellh.ghostty</string>
+		<key>Name</key>
+		<string>Ghostty</string>
+		<key>NewFile</key>
+		<string>/Applications/Ghostty.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.ActivityMonitor</string>
+		<key>Name</key>
+		<string>Activity Monitor</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Utilities/Activity Monitor.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.amazonaws.acvc.osx</string>
+		<key>Name</key>
+		<string>AWS VPN Client</string>
+		<key>NewFile</key>
+		<string>/Applications/AWS VPN Client/AWS VPN Client.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.systempreferences</string>
+		<key>Name</key>
+		<string>System Settings</string>
+		<key>NewFile</key>
+		<string>/System/Applications/System Settings.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.1password.1password</string>
+		<key>Name</key>
+		<string>1Password</string>
+		<key>NewFile</key>
+		<string>/Applications/1Password.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
 		<string>com.stairways.keyboardmaestro.editor</string>
 		<key>Name</key>
 		<string>Keyboard Maestro</string>
@@ -60,11 +140,27 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.AppStore</string>
+		<string>org.pqrs.Karabiner-EventViewer</string>
 		<key>Name</key>
-		<string>App Store</string>
+		<string>Karabiner-EventViewer</string>
 		<key>NewFile</key>
-		<string>/System/Applications/App Store.app</string>
+		<string>/Applications/Karabiner-EventViewer.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.Notes</string>
+		<key>Name</key>
+		<string>Notes</string>
+		<key>NewFile</key>
+		<string>/System/Applications/Notes.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.google.Chrome.canary</string>
+		<key>Name</key>
+		<string>Google Chrome Canary</string>
+		<key>NewFile</key>
+		<string>/Applications/Google Chrome Canary.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -76,11 +172,19 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.systempreferences</string>
+		<string>com.dwarvesv.minimalbar</string>
 		<key>Name</key>
-		<string>System Settings</string>
+		<string>Hidden Bar</string>
 		<key>NewFile</key>
-		<string>/System/Applications/System Settings.app</string>
+		<string>/Applications/Hidden Bar.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
+		<string>com.apple.AppStore</string>
+		<key>Name</key>
+		<string>App Store</string>
+		<key>NewFile</key>
+		<string>/System/Applications/App Store.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -100,22 +204,6 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.Notes</string>
-		<key>Name</key>
-		<string>Notes</string>
-		<key>NewFile</key>
-		<string>/System/Applications/Notes.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.tinyspeck.slackmacgap</string>
-		<key>Name</key>
-		<string>Slack</string>
-		<key>NewFile</key>
-		<string>/Applications/Slack.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
 		<string>com.runningwithcrayons.Alfred-Preferences</string>
 		<key>Name</key>
 		<string>Alfred Preferences</string>
@@ -129,22 +217,6 @@
 		<string>Archive Utility</string>
 		<key>NewFile</key>
 		<string>/System/Library/CoreServices/Applications/Archive Utility.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.google.Chrome</string>
-		<key>Name</key>
-		<string>Google Chrome</string>
-		<key>NewFile</key>
-		<string>/Applications/Google Chrome.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>org.mozilla.firefoxdeveloperedition</string>
-		<key>Name</key>
-		<string>Firefox Developer Edition</string>
-		<key>NewFile</key>
-		<string>/Applications/Firefox Developer Edition.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -169,14 +241,6 @@
 		<string>1Password</string>
 		<key>NewFile</key>
 		<string>/Applications/1Password.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.apple.Preview</string>
-		<key>Name</key>
-		<string>Preview</string>
-		<key>NewFile</key>
-		<string>/System/Applications/Preview.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
@@ -212,14 +276,6 @@
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
-		<string>com.apple.dt.Xcode</string>
-		<key>Name</key>
-		<string>Xcode</string>
-		<key>NewFile</key>
-		<string>/Applications/Xcode.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
 		<string>com.apple.BluetoothFileExchange</string>
 		<key>Name</key>
 		<string>Bluetooth File Exchange</string>
@@ -241,14 +297,6 @@
 		<string>Dictionary</string>
 		<key>NewFile</key>
 		<string>/System/Applications/Dictionary.app</string>
-	</dict>
-	<dict>
-		<key>BundleIdentifier</key>
-		<string>com.apple.ActivityMonitor</string>
-		<key>Name</key>
-		<string>Activity Monitor</string>
-		<key>NewFile</key>
-		<string>/System/Applications/Utilities/Activity Monitor.app</string>
 	</dict>
 	<dict>
 		<key>BundleIdentifier</key>
