--- a/private_Library/private_Application Support/Keyboard Maestro/Keyboard Maestro Recent Applications.plist
+++ b/private_Library/private_Application Support/Keyboard Maestro/Keyboard Maestro Recent Applications.plist
@@ -4,6 +4,14 @@
 <array>
 	<dict>
 		<key>BundleIdentifier</key>
+		<string>md.obsidian</string>
+		<key>Name</key>
+		<string>Obsidian</string>
+		<key>NewFile</key>
+		<string>/Applications/Obsidian.app</string>
+	</dict>
+	<dict>
+		<key>BundleIdentifier</key>
 		<string>com.apple.finder</string>
 		<key>Name</key>
 		<string>Finder</string>
