--- a/private_dot_config/ghostty/config
+++ b/private_dot_config/ghostty/config
@@ -1,8 +1,18 @@
 macos-non-native-fullscreen = true
+macos-titlebar-style = transparent
 window-padding-x = 10
 initial-window = true
+background-opacity = 0.75
+background-blur = 20
 
 macos-option-as-alt = true
 
 keybind = alt+left=unbind
 keybind = alt+right=unbind
+
+
+quick-terminal-position = center
+quick-terminal-animation-duration = 0
+keybind = global:ctrl+cmd+shift+j=toggle_quick_terminal
+
+confirm-close-surface = false
